hmw-sg.tf
// SETTING UP SECURITY GROUP RULES FOR LOAD BALANCER
resource "aws_security_group" "hmw-sg" {
  name          = "hmw-sg"
  vpc_id        = aws_vpc.hmw-vpc.id
  description   = "Allow all incoming traffic"
  
  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}

// SECURITY GROUP RULES FOR INSTANCES
resource "aws_security_group" "hmw-instances-sg" {
  name        = "allow_ssh_http_https"
  vpc_id        = aws_vpc.hmw-vpc.id
  description = "Allow SSH, HTTP and HTTPS inbound traffic for all instances"
  

  ingress {
    description     = "HTTP"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
    security_groups = [aws_security_group.hmw-sg.id]
  }

  ingress {
    description     = "HTTPS"
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
    security_groups = [aws_security_group.hmw-sg.id]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh_http_https-access_to_instances"
  }
}
